--- a/LoginScreen/LoginScreen/Base.lproj/LaunchScreen.storyboard
+++ b/LoginScreen/LoginScreen/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,22 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="241-rw-XSU">
+                                <rect key="frame" x="105" y="424" width="183" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="eCM-ts-dGa"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.24313727020000001" green="0.5411764979" blue="0.8156862855" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="241-rw-XSU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="105" id="3vZ-Gw-T4c"/>
+                            <constraint firstItem="241-rw-XSU" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Nww-s2-TuG"/>
+                            <constraint firstItem="241-rw-XSU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="365" id="VYZ-Uu-ZdR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="241-rw-XSU" secondAttribute="trailing" constant="105" id="X56-Qv-nX9"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +38,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Image" width="520" height="520"/>
+    </resources>
 </document>
